--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor,
               eligendi laboriosam. Repellendus officia harum eaque.
             </p>
-            <a class="btn" href="about.html">About Our Hotel</a>
+            <a class="btn" href="about.html">About My Hotel</a>
           </div>
         </div>
       </div>
